syntax = "proto3";

option java_outer_classname = "ItemProto";
option java_package = "model.protobuf";

import  "google/protobuf/timestamp.proto";

//耗材的查找，增加，修改
message ItemRequest{
  string uuid = 1;
  string secret = 2;
  RequestType type = 3;
  ItemParams param = 4;

  enum RequestType {
    LIST = 0;
    ADD = 1;
    EDIT = 2;
  }
}

message ItemParams {
  uint32 itemId = 1; //物品id
  string itemName = 2; //物品名称
  uint32 itemStock = 3; //物品库存
  google.protobuf.Timestamp itemAddedTime = 4;
  google.protobuf.Timestamp itemModifiedTime = 5;
}

message ItemResponse {
  Result result = 1;
  repeated ItemParams itemList = 2;

  enum Result{
    SUCCESS = 0;
    FAILED = 1;
  }
}
